# reflex-sdl2

./: .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE  README.md  default.nix  reflex-glish.cabal  reflex-sdl2.cabal  reflex-sdl2.nix  shell.nix  stack.yaml
app/: Main.hs
src/: Lib.hs  Shaders.hs
src/Reflex/: .#SDL2.hs  SDL2.hs
src/Reflex/SDL2/: Base.hs  Class.hs  Internal.hs  MonadLayered.hs
src/Shaders/: Utils.hs
