name:                reflex-glish
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/schell/reflex-glish#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          efsubenovex@gmail.com
copyright:           Copyright: (c) 2017 Schell Scivally
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Shaders
                     , Shaders.Utils
  build-depends:       base >= 4.7 && < 5
                     , dependent-sum >= 0.4
                     , either
                     , glucose
                     , gristle
                     , mtl >= 2.2.1
                     , reflex
                     , ref-tf
                     , sdl2
  default-language:    Haskell2010

executable reflex-glish-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reflex-glish
  default-language:    Haskell2010

test-suite reflex-glish-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reflex-glish
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/reflex-glish
