name:                reflex-sdl2
version:             0.2.0.0
synopsis:            SDL2 and reflex FRP
description:         A minimal host for sdl2 based reflex apps.
homepage:            https://github.com/schell/reflex-sdl2#readme
license:             MIT
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell@takt.com
copyright:           Copyright: (c) 2017 Schell Scivally
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Reflex.SDL2
                     , Reflex.SDL2.Internal
  build-depends:       async                  >= 2.1   && < 2.2
                     , base                   >= 4.7   && < 5
                     , containers             >= 0.5   && < 0.6
                     , dependent-sum          >= 0.4   && < 0.5
                     , exception-transformers >= 0.4   && < 0.5
                     , mtl                    >= 2.2   && < 2.3
                     , primitive              >= 0.6   && < 0.7
                     , reflex                 >= 0.5   && < 0.6
                     , ref-tf                 >= 0.4   && < 0.5
                     , sdl2                   >= 2.3   && < 2.4
                     , stm                    >= 2.4   && < 2.5
  default-language:    Haskell2010

executable reflex-sdl2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reflex-sdl2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/reflex-sdl2
